# chuk-speccy

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  publish-crates.yml  release-binaries.yml
cell-bench/: Cargo.toml  README.md  score.rs
cell-bench/src/: main.rs
cellz_py/: Cargo.toml  pyproject.toml
cellz_py/src/: lib.rs
chuk-mcp-cell/: README.md  pyproject.toml
chuk-mcp-cell/src/chuk_mcp_cell/: __init__.py  agent.py  library.py  server.py
chuk-mcp-cell/src/chuk_mcp_cell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
chuk-mcp-cell/tests/: test_server.py
chuk-mcp-spectrum/: .gitignore  README.md  pyproject.toml
chuk-mcp-spectrum/src/chuk_mcp_spectrum/: __init__.py  admin.py  agent.py  chat.py  serve.py  server.py  supervisor.py  video.py  viewer.py
chuk-mcp-spectrum/tests/: test_server.py
display/: Cargo.toml
display/src/: gif.rs  lib.rs
docs/: 01-core-emulator-spec.md  02-mcp-server-layer-spec.md  03-sdk-spec.md  04-spectrum-native-chat-spec.md  05-frontends-display-spec.md  06-roles-autonomy-spec.md  07-rust-z80-compiler-spec.md  08-speccy-kit-authoring-plane-spec.md  09-cell80-abi.md  09-sdk-capabilities-from-classic-games.md  README.md  getting-started.md  roadmap.md
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/tests/: realtime_tape.rs
rustz80/: Cargo.toml  README.md
rustz80/benches/: cell.rs
rustz80/cells/: abs_diff.rs  clamp.rs  gcd.rs  manhattan.rs  max.rs  min.rs  range_check.rs  weighted_sum.rs
rustz80/examples/: bitmap.rs  const_generics.rs  entities.rs  generics.rs  numerics.rs  points.rs  pool.rs  report.rs  rng.rs  rng32.rs  rpn_vm.rs  sieve.rs  sorting.rs  stack.rs  state_machine.rs  structs.rs  tuples.rs
rustz80/examples/common/: cpu.rs
rustz80/samples/: bounce.rs  move.rs  pixels.rs  reach.rs  snake.rs
rustz80/samples/showcase/: const_generics.rs  draw.rs  entities.rs  generic.rs  lcg.rs  numerics.rs  points.rs  pool.rs  rng32.rs  rpn.rs  sieve.rs  sort.rs  stack.rs  structs.rs  tuples.rs  vending.rs
rustz80/src/: cell.rs  codegen.rs  ir.rs  lib.rs  lower.rs  tap.rs
rustz80/src/cell/: cartridge.rs  cli.rs  config.rs  fast.rs  host.rs  index.rs  mod.rs  program.rs  report.rs  runner.rs  state.rs
rustz80/src/codegen/: asm.rs  expr.rs  mod.rs  runtime.rs  stmt.rs
rustz80/src/lower/: expr.rs  generics.rs  layout.rs  mod.rs  prelude.rs  stmt.rs  vars.rs
rustz80/tests/: arrays.rs  cell.rs  cell_fuzz.rs  coverage.rs  dial.rs  diff.rs  examples.rs  seam.rs  snake.rs  tap.rs
speccy-assets/: Cargo.toml
speccy-assets/src/: bake.rs  lib.rs
speccy-env/: Cargo.toml
speccy-env/src/: agents.rs  lib.rs
speccy-env/tests/: benchmark.rs  chase_bench.rs  env.rs  maze_bench.rs  platform_bench.rs  snake_bench.rs
speccy-games/: Cargo.toml
speccy-games/examples/: sprites_gif.rs
speccy-games/src/: lib.rs
speccy-games/tests/: snake.rs  sprites.rs
speccy-sdk/: Cargo.toml  README.md
speccy-sdk/samples/: blank.rs  bounce.rs  chase.rs  maze.rs  move.rs  platform.rs  reach.rs  snake.rs  snake_game.rs
speccy-sdk/src/: cell.rs  compile.rs  controls.rs  demo.rs  entities.rs  game.rs  graphics.rs  input.rs  lib.rs  render.rs  rng.rs  run.rs  runtime.rs  symbols.rs  templates.rs
speccy-sdk/src/graphics/: colour.rs  frame.rs  tile.rs
speccy-sdk/tests/: arrays.rs  dial.rs  seam.rs  snake.rs  tap_boot.rs
spectrum/: Cargo.toml
spectrum/examples/: audiodiag.rs  boot.rs  chat_terminal.rs  type.rs
spectrum/src/: host.rs  keyboard.rs  lib.rs  memory.rs  sdk.rs  serialize.rs  snapshot.rs  tape.rs  ula.rs
wos/: Cargo.toml  README.md
wos/src/: lib.rs
z80/: Cargo.toml
z80-tests/: Cargo.toml
z80-tests/examples/: zex.rs
z80-tests/src/: lib.rs
z80-tests/tests/: disasm.rs
z80/src/: alu.rs  bus.rs  cpu.rs  decode.rs  disasm.rs  flags.rs  lib.rs
zxspec_py/: .gitignore  Cargo.toml  pyproject.toml
zxspec_py/src/: lib.rs  trap.rs
