# PyO3 bindings exposing the `rustz80-cell` micro-VM host to Python as a warm `CellHost`
# class — the persistent session the `chuk-mcp-cell` MCP server drives. Standalone (not a
# member of the compiler workspace) so the cdylib + pyo3 link flags don't affect
# `cargo test --workspace`. Built with maturin. Mirrors `zxspec_py`.
[package]
name = "cellz_py"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace]
# Own workspace root, independent of the compiler workspace.

[lib]
name = "cellz_py"
crate-type = ["cdylib"]

[dependencies]
rustz80 = { path = "../rustz80", features = ["cell"] }
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
