[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-mcp-cell"
version = "0.1.0"
description = "MCP server exposing a library of deterministic rustz80-cell micro-tools as LLM-drivable tools (search / inspect / run, over a warm host)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chuk-mcp-server>=0.18",
    "cellz-py",
]

[project.scripts]
chuk-mcp-cell = "chuk_mcp_cell.agent:main"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["chuk_mcp_cell*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
