[package]
name = "chuk-speccy-display"
description = "Presentation pipeline: indexed framebuffer -> theme -> effects -> RGBA. Standalone, no emulator deps."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "display"

[dependencies]
# Animated-GIF encoding for indexed framebuffers (pure Rust, no system deps).
gif = "0.13"
