[package]
name = "frontend"
description = "Heads over the spectrum core. For now: a themed terminal (TUI) head via the display pipeline."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "speccy"
path = "src/main.rs"

[[bin]]
name = "speccy-gui"
path = "src/bin/gui.rs"

[[bin]]
name = "speccy-library"
path = "src/bin/library.rs"

[dependencies]
spectrum = { path = "../spectrum" }
display = { path = "../display" }
# World of Spectrum search + download, so a game can be named instead of a file.
wos = { path = "../wos" }
# Native pixel-perfect window head (the desktop head from spec 05): winit window
# + a CPU framebuffer (softbuffer), with native menus (muda) for a real app shell
# — runtime fullscreen + audio-device switching, multi-display, macOS green button.
winit = "0.30"
softbuffer = "0.4"
muda = "0.19"
# Cross-platform audio output for the beeper.
cpal = "0.15"
