[package]
name = "speccy"
description = "Heads over the spectrum core. For now: a themed terminal (TUI) head via the display pipeline."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "speccy"
path = "src/main.rs"

[[bin]]
name = "speccy-gui"
path = "src/bin/gui.rs"

[[bin]]
name = "speccy-library"
path = "src/bin/library.rs"

[[bin]]
name = "speccy-gif"
path = "src/bin/gif.rs"

[dependencies]
spectrum = { package = "chuk-speccy-spectrum", version = "0.3.0", path = "../spectrum" }
display = { package = "chuk-speccy-display", version = "0.3.0", path = "../display" }
# World of Spectrum search + download, so a game can be named instead of a file.
wos = { package = "chuk-speccy-wos", version = "0.3.0", path = "../wos" }
# Native Rust game SDK (the library) + the demo games that run on it.
speccy-sdk = { package = "chuk-speccy-sdk", version = "0.3.0", path = "../speccy-sdk" }
speccy-games = { package = "chuk-speccy-games", version = "0.3.0", path = "../speccy-games" }
# Native pixel-perfect window head (the desktop head from spec 05): winit window
# + a CPU framebuffer (softbuffer), with native menus (muda) for a real app shell
# — runtime fullscreen + audio-device switching, multi-display, macOS green button.
winit = "0.30"
softbuffer = "0.4"
muda = "0.19"
# Native open/save dialogs for the Machine menu (load/save snapshot).
rfd = "0.15"
# Cross-platform audio output for the beeper.
cpal = "0.15"
