# rustz80 (spec 07): a restricted Rust -> Z80 compiler. Stage 0 — syn frontend,
# own IR, naive Z80 codegen for u16 arithmetic + if/while; differential-tested
# against rustc on the emulator. Not an LLVM backend, no real `core`.
[package]
name = "rustz80"
description = "A restricted Rust -> Z80 compiler: the dialect is also real Rust; emits a bootable .tap."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
# Only the `rustz80-cell` micro-VM runner needs the CPU; the compiler library itself
# stays dependency-free (syn only). Opt in with `--features cell`.
z80 = { package = "chuk-speccy-z80", version = "0.1.0", path = "../z80", optional = true }

[features]
# The headless deterministic runner (`rustz80-cell`): compile + run on a flat-RAM Z80.
cell = ["dep:z80"]

[[bin]]
name = "rustz80-cell"
required-features = ["cell"]

# Throughput / latency benchmark for the cell runner (no criterion — a plain main).
[[bench]]
name = "cell"
harness = false
required-features = ["cell"]

[dev-dependencies]
# Run the compiled bytes on the real CPU to differential-test against rustc.
z80 = { package = "chuk-speccy-z80", version = "0.1.0", path = "../z80" }
# Boot a compiled `.tap` on the full machine (ROM-gated end-to-end test).
spectrum = { package = "chuk-speccy-spectrum", version = "0.1.0", path = "../spectrum" }
