# Native Rust game SDK — author games in Rust that run on the Spectrum substrate
# over the ED FE trap ABI (docs/03 §host-composite). The Z80 guest is a ~11-byte
# frame pump; all logic + rendering is host Rust. Depends only on the core.
[package]
name = "chuk-speccy-sdk"
description = "Native Rust game SDK for the Spectrum: write Game::update, run over the trap ABI."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "speccy_sdk"

# `speccy-compile`: the dialect `.rs` → bootable `.tap` (+ `.sym.toml`) CLI. Needs the
# `compile` feature (so the runtime API stays free of `rustz80`/`syn`).
[[bin]]
name = "speccy-compile"
path = "src/bin/speccy-compile.rs"
required-features = ["compile"]

# `speccy-new`: scaffold a dual-compile game from a template. Feature-free (scaffolding
# is plain text), so it never pulls in the compiler.
[[bin]]
name = "speccy-new"
path = "src/bin/speccy-new.rs"

# `speccy-run`: compile a dialect game and render it running to a GIF (one command,
# headless). Needs `compile` (it invokes the compiler + boots the emulator).
[[bin]]
name = "speccy-run"
path = "src/bin/speccy-run.rs"
required-features = ["compile"]

[features]
# The host game-compile flow (`compile` module + the CLIs). Off by default so the
# runtime API (Game/Frame/Controls/Rng/Entities) doesn't drag in the compiler.
compile = ["dep:rustz80", "dep:syn"]

[dependencies]
spectrum = { package = "chuk-speccy-spectrum", version = "0.3.0", path = "../spectrum" }
# The standalone presentation crate: the authentic palette + the canonical screen byte
# layout (`Frame` builds screen RAM through it), and `display::gif` for `speccy-run`.
# Already in the graph via `spectrum`, so depending on it directly adds nothing.
display = { package = "chuk-speccy-display", version = "0.3.0", path = "../display" }
# Only for the `compile` feature (the game-compile flow). From the standalone cell80 repo:
# 0.7 brings the single-call inliner + code-relative scratch placement (clean decomposed
# samples like `chase` compile as compactly as hand-inlined), on top of 0.6's Spectrum DCE.
rustz80 = { version = "0.7", optional = true }
syn = { version = "2", features = ["full"], optional = true }
